--- a/public/index.html
+++ b/public/index.html
@@ -1,65 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Ryezx API UI</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- CDN Tailwind -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-      body {
-        font-family: sans-serif;
-      }
-    </style>
-  </head>
-  <body class="bg-gray-100 text-gray-800">
-    <div class="max-w-2xl mx-auto p-4">
-      <h1 class="text-3xl font-bold mb-4 text-center">🔥 Ryezx API UI 🔥</h1>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>RyezX API Tester</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="icon" href="https://api.iconify.design/mdi:api.svg" />
+</head>
+<body class="bg-gradient-to-br from-blue-100 to-white min-h-screen text-gray-800 font-sans">
 
-      <div id="api-list" class="space-y-4"></div>
+  <div class="max-w-2xl mx-auto px-4 py-8">
+    <div class="flex items-center gap-2 mb-6">
+      <span class="text-4xl">🛠️</span>
+      <h1 class="text-3xl font-bold text-blue-800">RyezX API Tester</h1>
     </div>
 
-    <script>
-      const apis = [
-        {
-          name: "TikTok Downloader",
-          endpoint: "/downloader/tiktok?url=",
-          placeholder: "https://vt.tiktok.com/xxxxx"
-        },
-        {
-          name: "YouTube Downloader",
-          endpoint: "/downloader/ytdl?url=",
-          placeholder: "https://youtube.com/watch?v=xxxxx"
-        },
-        // Tambahin aja di sini bro...
-      ];
+    <!-- TikTok -->
+    <div class="bg-white shadow-md rounded-xl p-5 mb-6">
+      <h2 class="text-xl font-semibold text-blue-700 mb-2">📱 TikTok Downloader</h2>
+      <input id="tiktok" type="text" placeholder="Masukkan URL TikTok" class="w-full px-4 py-2 rounded border mb-3" />
+      <button onclick="testAPI('tiktok')" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded w-full">🚀 Test API</button>
+      <pre id="output-tiktok" class="bg-gray-100 text-sm mt-3 p-3 rounded overflow-x-auto">// Hasil akan muncul di sini</pre>
+    </div>
 
-      const container = document.getElementById("api-list");
+    <!-- YouTube -->
+    <div class="bg-white shadow-md rounded-xl p-5 mb-6">
+      <h2 class="text-xl font-semibold text-red-600 mb-2">🎥 YouTube Search</h2>
+      <input id="youtube" type="text" placeholder="Cari video YouTube" class="w-full px-4 py-2 rounded border mb-3" />
+      <button onclick="testAPI('youtube')" class="bg-red-500 hover:bg-red-600 text-white px-4 py-2 rounded w-full">🚀 Test API</button>
+      <pre id="output-youtube" class="bg-gray-100 text-sm mt-3 p-3 rounded overflow-x-auto">// Hasil akan muncul di sini</pre>
+    </div>
 
-      apis.forEach((api) => {
-        const div = document.createElement("div");
-        div.className = "bg-white rounded-xl shadow p-4";
+    <!-- ChatGPT -->
+    <div class="bg-white shadow-md rounded-xl p-5">
+      <h2 class="text-xl font-semibold text-purple-700 mb-2">🤖 ChatGPT AI</h2>
+      <input id="chatgpt" type="text" placeholder="Tulis pertanyaan..." class="w-full px-4 py-2 rounded border mb-3" />
+      <button onclick="testAPI('chatgpt')" class="bg-purple-600 hover:bg-purple-700 text-white px-4 py-2 rounded w-full">🚀 Test API</button>
+      <pre id="output-chatgpt" class="bg-gray-100 text-sm mt-3 p-3 rounded overflow-x-auto">// Hasil akan muncul di sini</pre>
+    </div>
+  </div>
 
-        div.innerHTML = `
-          <h2 class="font-semibold text-lg">${api.name}</h2>
-          <input type="text" placeholder="${api.placeholder}" class="w-full mt-2 p-2 border rounded" id="${api.name}-input" />
-          <button class="mt-2 bg-blue-500 text-white px-4 py-1 rounded" onclick="testApi('${api.endpoint}', '${api.name}')">Test API</button>
-          <pre class="mt-2 p-2 bg-gray-100 rounded text-sm overflow-auto" id="${api.name}-output">Waiting...</pre>
-        `;
-        container.appendChild(div);
-      });
+  <script>
+    async function testAPI(type) {
+      const inputs = {
+        tiktok: document.getElementById("tiktok").value,
+        youtube: document.getElementById("youtube").value,
+        chatgpt: document.getElementById("chatgpt").value,
+      };
 
-      async function testApi(endpoint, name) {
-        const input = document.getElementById(`${name}-input`).value;
-        const output = document.getElementById(`${name}-output`);
-        try {
-          const res = await fetch(endpoint + encodeURIComponent(input));
-          const data = await res.json();
-          output.textContent = JSON.stringify(data, null, 2);
-        } catch (err) {
-          output.textContent = "❌ Gagal fetch API";
-        }
-      }
-    </script>
-  </body>
+      let url = "";
+      if (type === "tiktok") url = `/downloader/tiktok?url=${encodeURIComponent(inputs.tiktok)}`;
+      if (type === "youtube") url = `/search/youtube?q=${encodeURIComponent(inputs.youtube)}`;
+      if (type === "chatgpt") url = `/ai/chatgpt?q=${encodeURIComponent(inputs.chatgpt)}`;
+
+      const res = await fetch(url);
+      const json = await res.json();
+      document.getElementById(`output-${type}`).textContent = JSON.stringify(json, null, 2);
+    }
+  </script>
+</body>
 </html>
