--- a/public/index.html
+++ b/public/index.html
@@ -3,59 +3,54 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>RyezX API Tester</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="icon" href="https://api.iconify.design/mdi:api.svg" />
+  <title>API Tester - Ryezx</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body class="bg-gradient-to-br from-blue-100 to-white min-h-screen text-gray-800 font-sans">
+<body class="bg-blue-100 text-gray-900 font-sans">
 
-  <div class="max-w-2xl mx-auto px-4 py-8">
-    <div class="flex items-center gap-2 mb-6">
-      <span class="text-4xl">🛠️</span>
-      <h1 class="text-3xl font-bold text-blue-800">RyezX API Tester</h1>
+  <div class="max-w-xl mx-auto mt-10 bg-white rounded-2xl shadow-lg p-6 space-y-6">
+    <h1 class="text-2xl font-bold text-blue-700">🧪 Ryezx API Tester</h1>
+
+    <div>
+      <label class="block font-semibold mb-1 text-blue-600">📌 Pilih Endpoint API</label>
+      <select id="apiSelect" class="w-full border p-2 rounded-lg">
+        <option value="tools/tiktok?url=">TikTok Downloader</option>
+        <option value="tools/ytmp3?url=">YouTube MP3</option>
+        <option value="tools/ytmp4?url=">YouTube MP4</option>
+        <!-- 🔧 Tambah endpoint lain di sini -->
+      </select>
     </div>
 
-    <!-- TikTok -->
-    <div class="bg-white shadow-md rounded-xl p-5 mb-6">
-      <h2 class="text-xl font-semibold text-blue-700 mb-2">📱 TikTok Downloader</h2>
-      <input id="tiktok" type="text" placeholder="Masukkan URL TikTok" class="w-full px-4 py-2 rounded border mb-3" />
-      <button onclick="testAPI('tiktok')" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded w-full">🚀 Test API</button>
-      <pre id="output-tiktok" class="bg-gray-100 text-sm mt-3 p-3 rounded overflow-x-auto">// Hasil akan muncul di sini</pre>
+    <div>
+      <label class="block font-semibold mb-1 text-blue-600">🔗 Masukkan Link (URL)</label>
+      <input type="text" id="urlInput" placeholder="https://..." class="w-full p-2 border rounded-lg" />
     </div>
 
-    <!-- YouTube -->
-    <div class="bg-white shadow-md rounded-xl p-5 mb-6">
-      <h2 class="text-xl font-semibold text-red-600 mb-2">🎥 YouTube Search</h2>
-      <input id="youtube" type="text" placeholder="Cari video YouTube" class="w-full px-4 py-2 rounded border mb-3" />
-      <button onclick="testAPI('youtube')" class="bg-red-500 hover:bg-red-600 text-white px-4 py-2 rounded w-full">🚀 Test API</button>
-      <pre id="output-youtube" class="bg-gray-100 text-sm mt-3 p-3 rounded overflow-x-auto">// Hasil akan muncul di sini</pre>
-    </div>
+    <button onclick="testAPI()" class="w-full bg-blue-600 text-white font-semibold py-2 rounded-lg hover:bg-blue-700">
+      🚀 Test API
+    </button>
 
-    <!-- ChatGPT -->
-    <div class="bg-white shadow-md rounded-xl p-5">
-      <h2 class="text-xl font-semibold text-purple-700 mb-2">🤖 ChatGPT AI</h2>
-      <input id="chatgpt" type="text" placeholder="Tulis pertanyaan..." class="w-full px-4 py-2 rounded border mb-3" />
-      <button onclick="testAPI('chatgpt')" class="bg-purple-600 hover:bg-purple-700 text-white px-4 py-2 rounded w-full">🚀 Test API</button>
-      <pre id="output-chatgpt" class="bg-gray-100 text-sm mt-3 p-3 rounded overflow-x-auto">// Hasil akan muncul di sini</pre>
+    <div id="resultContainer" class="mt-6 bg-gray-100 p-4 rounded-lg text-sm whitespace-pre-wrap overflow-x-auto">
+      <strong class="text-blue-600">📋 Hasil:</strong>
+      <div id="result" class="mt-2"></div>
     </div>
   </div>
 
   <script>
-    async function testAPI(type) {
-      const inputs = {
-        tiktok: document.getElementById("tiktok").value,
-        youtube: document.getElementById("youtube").value,
-        chatgpt: document.getElementById("chatgpt").value,
-      };
+    async function testAPI() {
+      const endpoint = document.getElementById('apiSelect').value;
+      const url = document.getElementById('urlInput').value.trim();
+      const fullUrl = `${endpoint}${encodeURIComponent(url)}`;
 
-      let url = "";
-      if (type === "tiktok") url = `/downloader/tiktok?url=${encodeURIComponent(inputs.tiktok)}`;
-      if (type === "youtube") url = `/search/youtube?q=${encodeURIComponent(inputs.youtube)}`;
-      if (type === "chatgpt") url = `/ai/chatgpt?q=${encodeURIComponent(inputs.chatgpt)}`;
+      document.getElementById('result').textContent = '⏳ Loading...';
 
-      const res = await fetch(url);
-      const json = await res.json();
-      document.getElementById(`output-${type}`).textContent = JSON.stringify(json, null, 2);
+      try {
+        const res = await fetch(fullUrl);
+        const data = await res.json();
+        document.getElementById('result').textContent = JSON.stringify(data, null, 2);
+      } catch (err) {
+        document.getElementById('result').textContent = '❌ Gagal fetch API';
+      }
     }
   </script>
 </body>
