--- a/public/index.html
+++ b/public/index.html
@@ -3,27 +3,29 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>API Tester - Ryezx</title>
+  <title>API Tester</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body class="bg-blue-100 text-gray-900 font-sans">
+<body class="bg-blue-100 font-sans">
 
-  <div class="max-w-xl mx-auto mt-10 bg-white rounded-2xl shadow-lg p-6 space-y-6">
-    <h1 class="text-2xl font-bold text-blue-700">🧪 Ryezx API Tester</h1>
+  <div class="max-w-xl mx-auto mt-10 bg-white rounded-2xl shadow-xl p-6 space-y-6">
+    <h1 class="text-2xl font-bold text-blue-700">🧪 API Tester - Ryezx</h1>
 
     <div>
-      <label class="block font-semibold mb-1 text-blue-600">📌 Pilih Endpoint API</label>
-      <select id="apiSelect" class="w-full border p-2 rounded-lg">
-        <option value="tools/tiktok?url=">TikTok Downloader</option>
-        <option value="tools/ytmp3?url=">YouTube MP3</option>
-        <option value="tools/ytmp4?url=">YouTube MP4</option>
-        <!-- 🔧 Tambah endpoint lain di sini -->
+      <label class="block font-semibold mb-1 text-blue-600">Pilih Jenis API</label>
+      <select id="apiType" onchange="changeInputField()" class="w-full border p-2 rounded-lg">
+        <option value="tools/tiktok?url=" data-type="url">🎵 TikTok Downloader</option>
+        <option value="tools/ytmp3?url=" data-type="url">🎧 YouTube MP3</option>
+        <option value="tools/ytmp4?url=" data-type="url">🎬 YouTube MP4</option>
+        <option value="search/lirik?q=" data-type="text">🎤 Cari Lirik</option>
+        <option value="ai/chat?prompt=" data-type="text">🤖 ChatGPT AI</option>
+        <!-- Tambahin endpoint lain -->
       </select>
     </div>
 
     <div>
-      <label class="block font-semibold mb-1 text-blue-600">🔗 Masukkan Link (URL)</label>
-      <input type="text" id="urlInput" placeholder="https://..." class="w-full p-2 border rounded-lg" />
+      <label id="inputLabel" class="block font-semibold mb-1 text-blue-600">🔗 Masukkan URL</label>
+      <input type="text" id="apiInput" placeholder="https://..." class="w-full p-2 border rounded-lg" />
     </div>
 
     <button onclick="testAPI()" class="w-full bg-blue-600 text-white font-semibold py-2 rounded-lg hover:bg-blue-700">
@@ -37,19 +39,37 @@
   </div>
 
   <script>
-    async function testAPI() {
-      const endpoint = document.getElementById('apiSelect').value;
-      const url = document.getElementById('urlInput').value.trim();
-      const fullUrl = `${endpoint}${encodeURIComponent(url)}`;
+    const BASE_URL = "https://xskycode-api.vercel.app/"; // Ganti kalau lo host di tempat lain
 
-      document.getElementById('result').textContent = '⏳ Loading...';
+    function changeInputField() {
+      const select = document.getElementById("apiType");
+      const selectedOption = select.options[select.selectedIndex];
+      const inputType = selectedOption.getAttribute("data-type");
+      const label = document.getElementById("inputLabel");
+
+      if (inputType === "url") {
+        label.textContent = "🔗 Masukkan URL";
+        document.getElementById("apiInput").placeholder = "https://...";
+      } else {
+        label.textContent = "💬 Masukkan Prompt / Teks";
+        document.getElementById("apiInput").placeholder = "Contoh: Lirik lagu Hati-Hati di Jalan";
+      }
+    }
+
+    async function testAPI() {
+      const select = document.getElementById("apiType");
+      const endpoint = select.value;
+      const input = document.getElementById("apiInput").value.trim();
+      const fullURL = BASE_URL + endpoint + encodeURIComponent(input);
+
+      document.getElementById("result").textContent = "⏳ Loading...";
 
       try {
-        const res = await fetch(fullUrl);
+        const res = await fetch(fullURL);
         const data = await res.json();
-        document.getElementById('result').textContent = JSON.stringify(data, null, 2);
+        document.getElementById("result").textContent = JSON.stringify(data, null, 2);
       } catch (err) {
-        document.getElementById('result').textContent = '❌ Gagal fetch API';
+        document.getElementById("result").textContent = "❌ Gagal fetch API: " + err;
       }
     }
   </script>
